--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "react-dom": "^18.2.0",
     "react-icons": "^4.7.1",
     "react-lazy-load-image-component": "^1.5.6",
-    "react-router-dom": "^6.8.1"
+    "react-router-dom": "^6.8.1",
+    "swiper": "^9.1.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.27",
