--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-icons": "^4.7.1",
     "react-lazy-load-image-component": "^1.5.6",
     "react-router-dom": "^6.8.1",
+    "styled-components": "^5.3.6",
     "swiper": "^9.1.0",
     "uuid": "^9.0.0"
   },
@@ -23,6 +24,7 @@
     "@types/react": "^18.0.27",
     "@types/react-dom": "^18.0.10",
     "@types/react-lazy-load-image-component": "^1.5.2",
+    "@types/styled-components": "^5.1.26",
     "@vitejs/plugin-react": "^3.1.0",
     "autoprefixer": "^10.4.13",
     "postcss": "^8.4.21",
