--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "react-lazy-load-image-component": "^1.5.6",
     "react-router-dom": "^6.8.1",
     "styled-components": "^5.3.6",
+    "sweetalert2": "^11.7.3",
+    "sweetalert2-react-content": "^5.0.7",
     "swiper": "^9.1.0",
     "uuid": "^9.0.0"
   },
