--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "framer-motion": "^10.0.2",
     "react": "^18.2.0",
     "react-cookie": "^4.1.1",
+    "react-currency-format": "^1.1.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.7.1",
     "react-lazy-load-image-component": "^1.5.6",
@@ -26,6 +27,7 @@
   "devDependencies": {
     "@types/js-cookie": "^3.0.3",
     "@types/react": "^18.0.27",
+    "@types/react-currency-format": "^1.0.0",
     "@types/react-dom": "^18.0.10",
     "@types/react-lazy-load-image-component": "^1.5.2",
     "@types/styled-components": "^5.1.26",
