--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-icons": "^4.7.1",
     "react-lazy-load-image-component": "^1.5.6",
     "react-router-dom": "^6.8.1",
+    "react-timer-hook": "^3.0.5",
     "styled-components": "^5.3.6",
     "sweetalert2": "^11.7.3",
     "sweetalert2-react-content": "^5.0.7",
