--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "aos": "^2.3.4",
     "axios": "^1.3.4",
     "framer-motion": "^10.0.2",
     "react": "^18.2.0",
@@ -22,9 +23,11 @@
     "sweetalert2": "^11.7.3",
     "sweetalert2-react-content": "^5.0.7",
     "swiper": "^9.1.0",
+    "typewriter-effect": "^2.19.0",
     "uuid": "^9.0.0"
   },
   "devDependencies": {
+    "@types/aos": "^3.0.4",
     "@types/js-cookie": "^3.0.3",
     "@types/react": "^18.0.27",
     "@types/react-currency-format": "^1.0.0",
